<resources>
    <string name="app_name">EasyDOC</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_hospitals">Hospitals</string>
    <string name="menu_doctors">Doctors</string>
    <string name="menu_ambulance">Ambulance</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>


    //Login page
    <string name="Login">Login</string>
    <string name="Name">Enter Name</string>
    <string name="Email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="confirmpassword">Confirm your Password</string>
    <string name="registerHere">Register </string>
    <string name="phonenumber">Phone number</string>
    <string name="Department">Department</string>


    <!--    Dashboard Entries-->

    <string name="Patients">Patient</string>
    <string name="Doctors">Doctor</string>
    <string name="Admin">Admin</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="title_activity_google_maps_location">GoogleMapsLocationActivity</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--    End of Dashboard entries-->


    <!--    Doctors page-->

    <string name="Dentist">Dentist</string>
    <string name="Dermatology">Dermatology</string>
    <string name="Pediatrician">Pediatrician</string>
    <string name="Orthopedics">Orthopedics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_hometwo">HometwoActivity</string>
    <string name="title_activity_doctor_home_activty">DoctorHomeActivty</string>

</resources>