<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/hospital"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ambulance"
            android:title="@string/menu_ambulance" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/appointment"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/appointment"
            android:title="@string/menu_doctors" />

        <item android:title="Communicates">
            <menu>

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logouttwo"
                    android:title="@string/menu_logout"/>

            </menu>
        </item>
    </group>
</menu>