<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorSignUpActivity"
    android:background="@drawable/adminloginback">

    <TextView
        android:id="@+id/welcotitle"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:text="Welcome"
        android:textColor="#A39B51"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/weometitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Here"
        android:textColor="#E3D23B"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693">

        <EditText
            android:id="@+id/mDocEdtName"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="248dp" />

        <EditText
            android:id="@+id/mDocEdtEmail"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="312dp" />
        <EditText
            android:id="@+id/mDocEdtDepartment"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/Department"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="312dp" />

        <EditText
            android:id="@+id/mDocEdtPhoneNumber"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/phonenumber"
            android:inputType="number"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="312dp" />

        <EditText
            android:id="@+id/mDocEdtPassword"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/mDocEdtConfirmPassword"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/mDocBtnRegister"
            style="@style/buttons"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/registerHere" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Already have an account   "
                android:textSize="15dp" />

            <TextView
                android:textColor="#FFC107"
                android:id="@+id/mTvLoginPage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/Login"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>