<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientSignInActivity"
    android:background="@drawable/layout">



    <TextView
        android:id="@+id/welcomtitle"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:text="Welcome"
        android:textColor="#171717"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/welcmetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login Here"
        android:textColor="#E3D23B"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59">





        <EditText
            android:id="@+id/medtEmail"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="312dp" />

        <EditText
            android:id="@+id/medtPassword"
            style="@style/inputfield"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"

            android:hint="@string/password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/mBtnLogin"
            style="@style/buttons"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Don't have an account"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/mTvRegisterPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Here"
                android:textColor="#FFEB3B"
                android:textSize="15dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>